<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">Food Truck Tracker</string>
    <string name="email_field">email: </string>
    <string name="password_field">password: </string>
    <string name="button_send">Ok </string>
    <string name="title_activity_food_truck_maps">Food Truck Tracker</string>
    <string name="google_maps_key">AIzaSyBEKP3gLkdIUk8NBJ6Ha-CRKZt3eaSEfzs</string>
    <string name="title_activity_truck_maps">TruckMaps</string>
    <string name="btn_ok_info">OK</string>
    <string name="txt_cardapio">Cardapio</string>
    <string name="pricerange">$$$</string>
    <string name="register_name">Nome:</string>
    <string name="tags">TAGS</string>
    <string-array name="tags_array">
        <item>Mexicano</item>
        <item>Portugues</item>
        <item>Brownie</item>
        <item>Pizza</item>
        <item>USA</item>
        <item>China</item>
        <item>Brasil</item>
        <item>Cerveja Artesanal</item>
        <item>Chopp</item>
        <item>Mediterraneo</item>
        <item>Hot Dog</item>
        <item>Vegano</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="facebook_app_id">689590897887734</string>

    <string name="title_activity_splashscreen">Food Truck</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_review">ReviewActivity</string>
</resources>
