<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|left"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:src="@drawable/foodie"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|left"
        android:orientation="vertical">
        <EditText android:id="@+id/email_field"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="@string/email_field" />

        <EditText android:id="@+id/password_field"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="@string/password_field" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/button_send"
            android:onClick="changeActivity"/>
    </LinearLayout>
</LinearLayout>