<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_menu_camera"
                android:id="@+id/img_foodTruck"
                android:layout_marginRight="29dp"
                android:layout_marginEnd="29dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtNomeFoodtruck"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_delete"
                android:id="@+id/btn_negativo"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_input_add"
                android:id="@+id/btn_positivo"
                android:layout_weight="1" />

        </LinearLayout>

        <TextView
            android:text="@string/tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtTags"
            android:textAlignment="center"
            android:layout_marginTop="35dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bar_avaliacao"
            android:layout_marginTop="57dp"
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:layout_weight="1"
            android:numStars="5"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:text="@string/pricerange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtPriceRange"
            android:textStyle="normal|bold"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_marginTop="13dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal" />

        <Button
            android:text="@string/txt_cardapio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonCardapio"
            android:layout_marginTop="21dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal" />

        <Button
            android:text="@string/btn_ok_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_ok_info"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>


</RelativeLayout>